--- a/user.html
+++ b/user.html
@@ -1,56 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Posts</title>
-  <script src="https://unpkg.com/@supabase/supabase-js"></script>
-</head>
-<body>
-
-<h3>Posts</h3>
-<div id="posts">Loading...</div>
-
-<script>
-const supabase = supabasejs.createClient(
-  "https://vduqewqyvszfquntmark.supabase.co",
-  "sb_publishable_YseP73aoHam8YT6B0b9EQQ_iAUEWARI"
-);
-
-async function loadPosts() {
-  console.log("Starting to load posts...");
-  
-  try {
-    const { data, error } = await supabase
-      .from("posts")
-      .select("content");
-
-    console.log("Data:", data);
-    console.log("Error:", error);
-
-    if (error) {
-      document.getElementById("posts").innerText = "Error: " + error.message;
-      console.error("Supabase error:", error);
-      return;
-    }
-
-    if (!data || data.length === 0) {
-      document.getElementById("posts").innerText = "No posts found";
-      return;
-    }
-
-    document.getElementById("posts").innerHTML =
-      data.map(p => `<p>${p.content}</p>`).join("");
-    
-    console.log("Posts loaded successfully!");
-    
-  } catch (e) {
-    console.error("Caught error:", e);
-    document.getElementById("posts").innerText = "Error: " + e.message;
-  }
-}
-
-loadPosts();
-</script>
-
-</body>
-</html>
+write
