--- a/user.html
+++ b/user.html
@@ -178,6 +178,23 @@ body.light-theme .logo-img {
   padding: 24px 24px 80px;
   padding-top: calc(65px + env(safe-area-inset-top));
 }
+.welcome-banner {
+  display: none;
+  padding: 40px 24px;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.welcome-banner.show {
+  display: block;
+}
+.welcome-banner-text {
+  font-family: Arial, sans-serif;
+  font-size: 48px;
+  font-weight: bold;
+  color: var(--text-primary);
+  margin: 0;
+  line-height: 1.2;
+}
 .article-list {
   list-style: none;
   margin: 0;
@@ -249,6 +266,13 @@ body.light-theme .logo-img {
     padding: 16px 16px 80px;
     padding-top: calc(65px + env(safe-area-inset-top));
   }
+  .welcome-banner {
+    padding: 32px 16px;
+    margin-bottom: 16px;
+  }
+  .welcome-banner-text {
+    font-size: 32px;
+  }
   .article-title {
     font-size: 32px;
   }
@@ -258,12 +282,6 @@ body.light-theme .logo-img {
   .footer {
     padding: 20px 16px;
     font-size: 13px;
-  }
-  .welcome-text {
-    max-width: 150px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
   .auth-buttons {
     gap: 8px;
@@ -288,15 +306,14 @@ body.light-theme .logo-img {
         <i class="fas fa-circle-half-stroke"></i>
       </button>
 
+```
   <!-- Auth buttons (shown when logged out) -->
   <div class="auth-buttons" id="authButtons">
     <a href="login.html" class="btn-login">Log In</a>
-    <a href="login.html" class="btn-signup">Sign Up</a>
   </div>
   
-  <!-- User welcome (shown when logged in) -->
+  <!-- User menu (shown when logged in) -->
   <div class="user-welcome" id="userWelcome">
-    <span class="welcome-text" id="welcomeText">Welcome</span>
     <div class="user-menu">
       <button class="icon-btn" onclick="toggleUserMenu()" title="User menu">
         <i class="fas fa-user"></i>
@@ -318,11 +335,17 @@ body.light-theme .logo-img {
     </div>
   </div>
 </div>
+```
 
   </div>
 </div>
 
 <div class="list-container">
+  <!-- Welcome Banner (shown when logged in) -->
+  <div class="welcome-banner" id="welcomeBanner">
+    <h1 class="welcome-banner-text" id="welcomeBannerText">Welcome</h1>
+  </div>
+
   <ul class="article-list">
     <li class="article-item" onclick="openArticle('patholytica.com/library')">
       <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
@@ -538,12 +561,14 @@ const supabase = window.supabase.createClient(
 onAuthStateChanged(auth, async (user) => {
   const authButtons = document.getElementById('authButtons');
   const userWelcome = document.getElementById('userWelcome');
-  const welcomeText = document.getElementById('welcomeText');
+  const welcomeBanner = document.getElementById('welcomeBanner');
+  const welcomeBannerText = document.getElementById('welcomeBannerText');
   
   if (user) {
     // User is logged in
     authButtons.classList.remove('show');
     userWelcome.classList.add('show');
+    welcomeBanner.classList.add('show');
     
     // Get user data from Supabase to get first name
     try {
@@ -556,22 +581,23 @@ onAuthStateChanged(auth, async (user) => {
       if (data && data.full_name) {
         // Extract first name from full name
         const firstName = data.full_name.split(' ')[0];
-        welcomeText.textContent = `Welcome, ${firstName}`;
+        welcomeBannerText.textContent = `Welcome, ${firstName}`;
       } else {
         // Fallback to email username or display name
         const firstName = user.displayName ? user.displayName.split(' ')[0] : user.email.split('@')[0];
-        welcomeText.textContent = `Welcome, ${firstName}`;
+        welcomeBannerText.textContent = `Welcome, ${firstName}`;
       }
     } catch (error) {
       console.error("Error fetching user data:", error);
       // Fallback
       const firstName = user.displayName ? user.displayName.split(' ')[0] : user.email.split('@')[0];
-      welcomeText.textContent = `Welcome, ${firstName}`;
+      welcomeBannerText.textContent = `Welcome, ${firstName}`;
     }
   } else {
     // User is logged out
     authButtons.classList.add('show');
     userWelcome.classList.remove('show');
+    welcomeBanner.classList.remove('show');
   }
 });
 
