--- a/user.html
+++ b/user.html
@@ -41,21 +41,22 @@ body {
   position: relative;
 }
 
-/* Fixed Background Image */
+/* ABSOLUTELY STATIC Fixed Background Image */
 body::before {
   content: '';
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920&q=80');
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   z-index: -1;
   opacity: 0.3;
+  pointer-events: none;
 }
 
 body.light-theme::before {
@@ -211,6 +212,8 @@ body.light-theme .user-menu-dropdown {
   margin: 0 auto;
   padding: 24px 24px 80px;
   padding-top: calc(65px + env(safe-area-inset-top));
+  background: transparent;
+  position: relative;
 }
 
 /* Beautiful Welcome Banner */
@@ -232,7 +235,7 @@ body.light-theme .user-menu-dropdown {
   margin: 0 0 16px 0;
   line-height: 1.2;
   letter-spacing: -1px;
-  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 .welcome-subtitle {
@@ -243,45 +246,54 @@ body.light-theme .user-menu-dropdown {
   margin: 0;
   letter-spacing: 0.5px;
   font-style: italic;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 }
 
-/* Compact Cards */
+/* Compact Article List - Original Style */
 .article-list {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  gap: 20px;
-}
-.article-item {
-  background: rgba(15, 15, 15, 0.85);
+  background: rgba(15, 15, 15, 0.92);
   backdrop-filter: blur(10px);
-  border: 1px solid var(--border-color);
-  border-radius: 12px;
-  padding: 24px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
-body.light-theme .article-item {
-  background: rgba(255, 255, 255, 0.85);
+body.light-theme .article-list {
+  background: rgba(255, 255, 255, 0.92);
+}
+
+.article-item {
+  padding: 24px 0;
+  border-bottom: 1px solid var(--border-color);
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+
+.article-item:first-child {
+  padding-top: 24px;
+  border-radius: 8px 8px 0 0;
+}
+
+.article-item:last-child {
+  border-bottom: none;
+  border-radius: 0 0 8px 8px;
 }
 
 .article-item:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-  border-color: var(--accent);
+  background: var(--hover-bg);
+  margin: 0 -12px;
+  padding: 24px 12px;
 }
-
 .article-title {
-  font-family: 'Georgia', 'Times New Roman', serif;
-  font-size: 28px;
-  font-weight: 600;
-  margin: 0 0 12px 0;
-  line-height: 1.3;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 42px;
+  font-weight: bold;
+  margin: 0 0 8px 0;
+  line-height: 1.2;
   color: var(--text-primary);
   word-wrap: break-word;
+  padding: 0 24px;
 }
 .article-item:hover .article-title {
   color: var(--accent);
@@ -293,6 +305,7 @@ body.light-theme .article-item {
   align-items: center;
   gap: 8px;
   flex-wrap: wrap;
+  padding: 0 24px;
 }
 .meta-dot {
   width: 3px;
@@ -310,6 +323,8 @@ body.light-theme .article-item {
   color: var(--text-secondary);
   font-size: 14px;
   line-height: 1.6;
+  position: relative;
+  z-index: 1;
 }
 
 body.light-theme .footer {
@@ -346,11 +361,8 @@ body.light-theme .footer {
   .welcome-subtitle {
     font-size: 16px;
   }
-  .article-item {
-    padding: 20px;
-  }
   .article-title {
-    font-size: 22px;
+    font-size: 32px;
   }
   .article-meta {
     font-size: 13px;
