--- a/user.html
+++ b/user.html
@@ -62,12 +62,12 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920&q=80');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   opacity: 0.3;
   pointer-events: none;
+  transition: opacity 0.5s ease;
 }
 
 body.light-theme .background-image {
@@ -225,17 +225,15 @@ body.light-theme .user-menu-dropdown {
   padding-top: calc(65px + env(safe-area-inset-top));
 }
 
-/* Beautiful Welcome Banner - MORE VISIBLE */
+/* Beautiful Welcome Banner - EVEN MORE VISIBLE */
 .welcome-banner {
-  display: none;
-  padding: 120px 24px 80px;
+  display: block;
+  padding: 180px 24px 120px;
   text-align: center;
   width: 100%;
   position: relative;
 }
-.welcome-banner.show {
-  display: block;
-}
+
 .welcome-banner-text {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 64px;
@@ -352,7 +350,7 @@ body.light-theme .user-menu-dropdown {
     padding: 16px 16px 80px;
   }
   .welcome-banner {
-    padding: 100px 16px 60px;
+    padding: 140px 16px 80px;
   }
   .welcome-banner-text {
     font-size: 42px;
@@ -384,7 +382,7 @@ body.light-theme .user-menu-dropdown {
 
 <!-- ABSOLUTELY STATIC BACKGROUND - SEPARATE WRAPPER -->
 <div class="background-wrapper">
-  <div class="background-image"></div>
+  <div class="background-image" id="backgroundImage"></div>
 </div>
 
 <div class="header-wrapper">
@@ -431,10 +429,10 @@ body.light-theme .user-menu-dropdown {
 </div>
 
 <div class="page-wrapper">
-  <!-- Beautiful Welcome Banner (shown when logged in) -->
+  <!-- Beautiful Welcome Banner (always shown) -->
   <div class="welcome-banner" id="welcomeBanner">
-    <h1 class="welcome-banner-text" id="welcomeBannerText">Welcome</h1>
-    <p class="welcome-subtitle">Explore the frontier of medical knowledge</p>
+    <h1 class="welcome-banner-text" id="welcomeBannerText">Welcome to Patholytica</h1>
+    <p class="welcome-subtitle" id="welcomeSubtitle">A Medicinebank project</p>
   </div>
 
   <!-- Full Width Content Container -->
@@ -657,14 +655,13 @@ const supabase = window.supabase.createClient(
 onAuthStateChanged(auth, async (user) => {
   const authButtons = document.getElementById('authButtons');
   const userWelcome = document.getElementById('userWelcome');
-  const welcomeBanner = document.getElementById('welcomeBanner');
   const welcomeBannerText = document.getElementById('welcomeBannerText');
+  const welcomeSubtitle = document.getElementById('welcomeSubtitle');
   
   if (user) {
     // User is logged in
     authButtons.classList.remove('show');
     userWelcome.classList.add('show');
-    welcomeBanner.classList.add('show');
     
     // Get user data from Supabase to get first name
     try {
@@ -678,22 +675,26 @@ onAuthStateChanged(auth, async (user) => {
         // Extract first name from full name
         const firstName = data.full_name.split(' ')[0];
         welcomeBannerText.textContent = `Welcome, ${firstName}`;
+        welcomeSubtitle.textContent = 'Explore the frontier of medical knowledge';
       } else {
         // Fallback to email username or display name
         const firstName = user.displayName ? user.displayName.split(' ')[0] : user.email.split('@')[0];
         welcomeBannerText.textContent = `Welcome, ${firstName}`;
+        welcomeSubtitle.textContent = 'Explore the frontier of medical knowledge';
       }
     } catch (error) {
       console.error("Error fetching user data:", error);
       // Fallback
       const firstName = user.displayName ? user.displayName.split(' ')[0] : user.email.split('@')[0];
       welcomeBannerText.textContent = `Welcome, ${firstName}`;
+      welcomeSubtitle.textContent = 'Explore the frontier of medical knowledge';
     }
   } else {
     // User is logged out
     authButtons.classList.add('show');
     userWelcome.classList.remove('show');
-    welcomeBanner.classList.remove('show');
+    welcomeBannerText.textContent = 'Welcome to Patholytica';
+    welcomeSubtitle.textContent = 'A Medicinebank project';
   }
 });
 
@@ -712,6 +713,35 @@ window.logOut = async function() {
 </script>
 
 <script>
+// Random Natural Landscape Backgrounds
+const backgroundImages = [
+  'https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920&q=80', // Mountains
+  'https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=1920&q=80', // Forest
+  'https://images.unsplash.com/photo-1469474968028-56623f02e42e?w=1920&q=80', // Lake
+  'https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=1920&q=80', // Meadow
+  'https://images.unsplash.com/photo-1472214103451-9374bd1c798e?w=1920&q=80', // Waterfall
+  'https://images.unsplash.com/photo-1511884642898-4c92249e20b6?w=1920&q=80', // Canyon
+  'https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?w=1920&q=80', // Mountain Peak
+  'https://images.unsplash.com/photo-1501594907352-04cda38ebc29?w=1920&q=80', // Glacier
+  'https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=1920&q=80', // Northern Lights
+  'https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?w=1920&q=80', // Countryside
+  'https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?w=1920&q=80', // Ocean Cliffs
+  'https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?w=1920&q=80', // Rocky Mountains
+  'https://images.unsplash.com/photo-1506929562872-bb421503ef21?w=1920&q=80', // Rolling Hills
+  'https://images.unsplash.com/photo-1439066615861-d1af74d74000?w=1920&q=80', // Wilderness
+  'https://images.unsplash.com/photo-1465056836041-7f43ac27dcb5?w=1920&q=80' // Valley
+];
+
+// Set random background on page load
+function setRandomBackground() {
+  const randomIndex = Math.floor(Math.random() * backgroundImages.length);
+  const backgroundElement = document.getElementById('backgroundImage');
+  backgroundElement.style.backgroundImage = `url('${backgroundImages[randomIndex]}')`;
+}
+
+// Call on page load
+setRandomBackground();
+
 function toggleTheme() {
   document.body.classList.toggle('light-theme');
   localStorage.setItem("theme", document.body.classList.contains("light-theme") ? "light" : "dark");
