--- a/user.html
+++ b/user.html
@@ -70,8 +70,9 @@ body {
   transition: opacity 0.5s ease;
 }
 
+/* Background stays same opacity in light theme */
 body.light-theme .background-image {
-  opacity: 0.15;
+  opacity: 0.3;
 }
 
 .header-wrapper {
@@ -218,6 +219,72 @@ body.light-theme .user-menu-dropdown {
   width: 16px;
 }
 
+/* Search Bar Container */
+.search-container {
+  position: fixed;
+  top: calc(65px + env(safe-area-inset-top));
+  right: 24px;
+  z-index: 30;
+  width: 320px;
+  max-width: calc(100vw - 48px);
+}
+
+.search-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.search-input {
+  width: 100%;
+  padding: 12px 48px 12px 16px;
+  border-radius: 24px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(15, 15, 15, 0.8);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  font-size: 14px;
+  font-family: "Roboto", Arial, sans-serif;
+  outline: none;
+  transition: all 0.3s ease;
+}
+
+body.light-theme .search-input {
+  background: rgba(255, 255, 255, 0.9);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #0f0f0f;
+}
+
+.search-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+body.light-theme .search-input::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.search-input:focus {
+  border-color: var(--accent);
+  background: rgba(15, 15, 15, 0.95);
+}
+
+body.light-theme .search-input:focus {
+  background: rgba(255, 255, 255, 0.98);
+}
+
+.search-icon {
+  position: absolute;
+  right: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  pointer-events: none;
+}
+
+body.light-theme .search-icon {
+  color: rgba(0, 0, 0, 0.5);
+}
+
 /* Page wrapper to control layout */
 .page-wrapper {
   position: relative;
@@ -238,22 +305,32 @@ body.light-theme .user-menu-dropdown {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 64px;
   font-weight: 300;
-  color: var(--text-primary);
+  color: #ffffff;
   margin: 0 0 16px 0;
   line-height: 1.2;
   letter-spacing: -1px;
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
 
+/* Keep welcome text white in light theme */
+body.light-theme .welcome-banner-text {
+  color: #ffffff;
+}
+
 .welcome-subtitle {
   font-family: 'Georgia', 'Times New Roman', serif;
   font-size: 20px;
   font-weight: 300;
-  color: var(--text-secondary);
+  color: rgba(255, 255, 255, 0.9);
   margin: 0;
   letter-spacing: 0.5px;
   font-style: italic;
   text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Keep subtitle white in light theme */
+body.light-theme .welcome-subtitle {
+  color: rgba(255, 255, 255, 0.9);
 }
 
 /* Content container - FULL WIDTH */
@@ -346,6 +423,11 @@ body.light-theme .user-menu-dropdown {
   opacity: 0.8;
 }
 @media (max-width: 768px) {
+  .search-container {
+    right: 16px;
+    width: 280px;
+  }
+  
   .list-container {
     padding: 16px 16px 80px;
   }
@@ -376,6 +458,13 @@ body.light-theme .user-menu-dropdown {
     font-size: 13px;
   }
 }
+
+@media (max-width: 480px) {
+  .search-container {
+    right: 12px;
+    width: calc(100vw - 24px);
+  }
+}
 </style>
 </head>
 <body>
@@ -389,9 +478,6 @@ body.light-theme .user-menu-dropdown {
   <div class="header">
     <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
     <div class="header-actions">
-      <button class="icon-btn" onclick="searchArticles()" title="Search">
-        <i class="fas fa-search"></i>
-      </button>
       <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
         <i class="fas fa-circle-half-stroke"></i>
       </button>
@@ -428,6 +514,20 @@ body.light-theme .user-menu-dropdown {
   </div>
 </div>
 
+<!-- Search Bar -->
+<div class="search-container">
+  <div class="search-wrapper">
+    <input 
+      type="text" 
+      class="search-input" 
+      id="searchInput" 
+      placeholder="Search articles..."
+      onkeyup="handleSearch(event)"
+    >
+    <i class="fas fa-search search-icon"></i>
+  </div>
+</div>
+
 <div class="page-wrapper">
   <!-- Beautiful Welcome Banner (always shown) -->
   <div class="welcome-banner" id="welcomeBanner">
@@ -438,7 +538,7 @@ body.light-theme .user-menu-dropdown {
   <!-- Full Width Content Container -->
   <div class="content-container">
     <div class="list-container">
-      <ul class="article-list">
+      <ul class="article-list" id="articleList">
         <li class="article-item" onclick="openArticle('patholytica.com/library')">
           <h2 class="article-title">Understanding Cardiovascular Pathology: A Comprehensive Review</h2>
           <div class="article-meta">
@@ -742,6 +842,28 @@ function setRandomBackground() {
 // Call on page load
 setRandomBackground();
 
+// Search functionality
+function handleSearch(event) {
+  const searchTerm = event.target.value.toLowerCase();
+  const articles = document.querySelectorAll('.article-item');
+  
+  articles.forEach(article => {
+    const title = article.querySelector('.article-title').textContent.toLowerCase();
+    const meta = article.querySelector('.article-meta').textContent.toLowerCase();
+    
+    if (title.includes(searchTerm) || meta.includes(searchTerm)) {
+      article.style.display = '';
+    } else {
+      article.style.display = 'none';
+    }
+  });
+  
+  // Update article count
+  const visibleArticles = document.querySelectorAll('.article-item[style=""]').length;
+  const totalArticles = articles.length;
+  document.getElementById('articleCount').textContent = searchTerm ? visibleArticles : totalArticles;
+}
+
 function toggleTheme() {
   document.body.classList.toggle('light-theme');
   localStorage.setItem("theme", document.body.classList.contains("light-theme") ? "light" : "dark");
@@ -756,10 +878,7 @@ function openArticle(url) {
 }
 
 function searchArticles() {
-  const searchQuery = prompt('Search articles:');
-  if (searchQuery && searchQuery.trim()) {
-    alert(`Searching for: "${searchQuery}"\n\nSearch functionality would filter the article list.`);
-  }
+  document.getElementById('searchInput').focus();
 }
 
 function toggleUserMenu() {
